Blender crashes on "Make single user" option #37090

Closed
opened 2013-10-15 13:50:23 +02:00 by Daniel F. R. Gordillo · 5 comments

%%%--- Operating System, Graphics card ---
OS: Linux Mint Debian Edition. Hardware: AMD Phenom II X6 1090T, 8Gb RAM, Nvidia 460 GTX

- Blender version with error, and version that worked ---

Both 2.68a and 2.69 RC behave the same

- Short description of error ---

Blender crashes when trying to make any of the objects (horns) in the blend-file "single user"... I made another file with cubes and simple materials, and the process went OK. Don't know what's with these specific objects

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

click on any of the objects, and select the option "make single user", (both object and object & data will do)

%%%

%%%--- Operating System, Graphics card --- OS: Linux Mint Debian Edition. Hardware: AMD Phenom II X6 1090T, 8Gb RAM, Nvidia 460 GTX - Blender version with error, and version that worked --- Both 2.68a and 2.69 RC behave the same - Short description of error --- Blender crashes when trying to make any of the objects (horns) in the blend-file "single user"... I made another file with cubes and simple materials, and the process went OK. Don't know what's with these specific objects - Steps for others to reproduce the error (preferably based on attached .blend file) --- click on any of the objects, and select the option "make single user", (both object and object & data will do) %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Looking into the issue.%%%

%%%Looking into the issue.%%%

%%%Fixed in svn rev60784. Thanks for the report, closing.%%%

%%%Fixed in svn rev60784. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%that was fast!%%%

%%%that was fast!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37090
No description provided.